cabal-version:      3.0
name:               postgresql-simple-leak-repro
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable test
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.16.3.0,
      async,
      postgresql-simple ^>= 0.6.4,
      tmp-postgres

    hs-source-dirs:   app
    default-language: Haskell2010
