cabal-version:      3.0
name:               postgresql-simple-leak-repro
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable test
    main-is:          Main.hs
    ghc-options:
      -Wall
      -threaded
      -rtsopts
      -with-rtsopts=-N
    build-depends:
      base ^>=4.16.3.0,
      async,
      postgresql-simple == 0.6.4,
      tmp-postgres

    hs-source-dirs:   app
    default-language: Haskell2010
